Fixed Text Wrap in contact form

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         </div><!--//form-group-->
                         <div class="form-group message">
                             <label class="sr-only" for="message">Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="6" placeholder="Message$
+                            <textarea name="message" id="message" class="form-control" rows="6" placeholder="Message:"></textarea>
                         </div><!--//form-group-->
                         <button type="submit" value="Send" class="btn btn-lg btn-theme">Send Message</button>
 			<input type="hidden" name="_next" value="http://www.escherlabs.com/" />
