Hide Graphene Icons on xs

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ myBerryForm = {
             <div class="row">
                 <div class="col-sm-6" style="text-align:center;">
                     <div class="row">
-                        <div class="col-sm-3"><i class="fa fa-check-square-o fa-5x"></i></div>
-                        <div class="col-sm-offset-6 col-sm-3"><i class="fa fa-table fa-5x"></i></div>
+                        <div class="col-sm-3 hidden-xs"><i class="fa fa-check-square-o fa-5x"></i></div>
+                        <div class="col-sm-offset-6 col-sm-3 hidden-xs"><i class="fa fa-table fa-5x"></i></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-offset-3 col-sm-6">
@@ -164,8 +164,8 @@ myBerryForm = {
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-3"><i class="fa fa-dashboard fa-5x"></i></div>
-                        <div class="col-sm-offset-6 col-sm-3"><i class="fa fa-code fa-5x"></i></div>
+                        <div class="col-sm-3 hidden-xs"><i class="fa fa-dashboard fa-5x"></i></div>
+                        <div class="col-sm-offset-6 col-sm-3 hidden-xs"><i class="fa fa-code fa-5x"></i></div>
                     </div>
                 </div>
                 <div class="col-sm-6">
