--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
                     <i id="logo-image" class="logo-image fa fa-pencil fa-fw" src="assets/images/logo/logo.png" alt="Logo"></i>
-                    <span class="logo-title">EscherLabs</span>
+                    <span class="logo-title">Escher Labs</span>
                 </a>
             </h1><!--//logo-->              
             <nav id="main-nav" class="main-nav navbar-right" role="navigation">
@@ -52,9 +52,9 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#highlights">Highlights</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#how">Other Content</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#sample">Sample Projects</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#highlights">Libraries</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#how">Graphene Framework</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#sample">Example Projects</a></li>
                         <li class="nav-item"><a class="scrollto" href="#about">About Us</a></li>
                         <li class="nav-item last"><a class="scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
@@ -107,7 +107,7 @@ myBerryForm = {
         <div class="container">
             <div class="row">
                 <!--<h3 class="title text-center" style="margin-top:0px;margin-bottom:30px;color:#286da8">JavaScript Libraries</h3>-->
-                <div class="item col-md-3 col-sm-6 col-xs-12 text-center" data-toggle="modal" data-target="#berry-modal">
+                <a href="berry.html" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-check-square-o"></i>                
                     </div><!--//icon-->
@@ -115,8 +115,8 @@ myBerryForm = {
                         <h3 class="title">Berry.js</h3>
                         <p>A robust, extensible JavaScript form library based on JSON descriptors.</p>  
                     </div><!--//content-->               
-                </div><!--//item-->
-                <div class="item col-md-3 col-sm-6 col-xs-12 text-center" data-toggle="modal" data-target="#berry-tables-modal">
+                </a><!--//item-->
+                <a href="berryTables.html" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-table"></i>                
                     </div><!--//icon-->
@@ -124,7 +124,7 @@ myBerryForm = {
                         <h3 class="title">BerryTables.js</h3>
                         <p>A tabular, paginated, JavaScript library for browsing and manipulating data.</p>  
                     </div><!--//content-->               
-                </div><!--//item-->
+                </a><!--//item-->
                 <div class="item col-md-3 col-sm-6 col-xs-12 text-center" data-toggle="modal" data-target="#cobler-modal">
                     <div class="icon">
                         <i class="fa fa-dashboard"></i>                
@@ -322,85 +322,6 @@ myBerryForm = {
         </div>
     </footer><!--//footer-->
 
-    <!-- Berry Modal -->
-    <div class="modal modal-feature" id="berry-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 id="berry-modal-label" class="modal-title text-center">Berry Form Builder</h4>
-                </div>
-                <div class="modal-body"> 
-                    <div class="row">    
-                        <div class="content col-md-12 col-sm-12 col-xs-12">           
-                            <h3>80% of business app development is collecting and updating data.</h3>
-                            <p>With the Berry form library, building rich, complex forms using a simple JSON descriptor 
-                            is easier than ever.</p>
-                            
-                            <h4>Features include:</h4>
-                            <ul>
-                                <li>Contextual Hiding / Showing Form Fields</li>
-                                <li>Extensible Field Types</li>
-                                <li>Configurable Form Validation</li>
-                                <li>JSON Data Input / Output</li>
-                            </ul>
-                            <a href="https://github.com/Cloverstone/Berry"><i class="fa fa-github fa-fw"></i> &nbsp;Check out the code!</a>
-<!-- This is where the berries go! -->
-<div class="row">
-    <div class="col-sm-5"><h4>Form Definition</h4><div id="schema_editor" style="height:250px;"></div></div>
-    <div class="col-sm-3"><h4>Rendered Form</h4><div class="target"></div></div>
-    <div class="col-sm-4"><h4>Form Output</h4><div class="result"></div></div>
-</div>
-
-
-                        </div><!--//content-->
-                    </div><!--//row-->
-                </div><!--//modal-body-->
-            </div><!--//modal-content-->
-        </div><!--//modal-dialog-->
-    </div><!--//modal-->
-
-    <!-- Berry Tables Modal -->
-    <div class="modal modal-feature" id="berry-tables-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 id="berry-tables-modal-label" class="modal-title text-center">Berry Tables</h4>
-                </div>
-                <div class="modal-body"> 
-                    <div class="row">    
-                        <div class="content col-md-12 col-sm-12 col-xs-12">           
-                            <h3>CRUD (Create, Read, Update, Delete) has never been easier</h3>
-                            <p>Berry Tables takes Berry to the next level, providing a full tabular 
-                                interface for sorting, searching, paginating, editing, updating, adding, and deleting data.</p>
-                            <p>Just define your Berry form, map your CRUD functions, and your'e ready to go!</p>
-                            <a href="https://github.com/Cloverstone/berryTables"><i class="fa fa-github fa-fw"></i> &nbsp;Check out the code!</a>
-<div id="myBerryTable" style="margin-top:20px;"></div>
-<div class="row">
-    <div class="col-sm-12">
-        <pre><code class="prettyprint">bt = new berryTable({
-    container:'#myBerryTable',
-    title:'Demo Content',
-    count:4,
-    schema:[{type:"text", name:"name", label:"Name", required:true}], 
-    data: [
-        {name:'fifth'},
-        {name:'fourth'},
-        {name:'third'},
-        {name:'second'},
-        {name:'first'},
-    ]
-})</code></pre>
-    </div>
-</div>
-                        </div><!--//content-->
-                    </div><!--//row-->
-                </div><!--//modal-body-->
-            </div><!--//modal-content-->
-        </div><!--//modal-dialog-->
-    </div><!--//modal-->
-
         <!-- Berry Tables Modal -->
     <div class="modal modal-feature" id="cobler-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -439,67 +360,6 @@ myBerryForm = {
     <!--[if !IE]>--> 
     <script type="text/javascript" src="assets/js/animations.js"></script> 
     <!--<![endif]-->         
-
-<!-- This is for the berries! -->
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" charset="utf-8"></script>
-		<script type='text/javascript' src='http://twitter.github.com/hogan.js/builds/3.0.1/hogan-3.0.1.js'></script>
-        <script src='https://rawgit.com/Cloverstone/Berry/master/bin/full.berry.min.js'></script>
-        <script src='https://rawgit.com/Cloverstone/Berry/master/bin/bootstrap.full.berry.js'></script> 
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script> 
-        <script src='https://rawgit.com/Cloverstone/berryTables/master/bin/js/berryTables.min.js'></script> 
-
-		<script type='text/javascript'>
-		document.addEventListener('DOMContentLoaded', function(){
-			editor = ace.edit("schema_editor");
-			editor.getSession().setMode("ace/mode/javascript");
-			editor.getSession().setTabSize(2);
-			editor.getSession().on('change', function(e) {
-				try {
-				myfrom = JSON.parse(editor.getValue());
-				for(var i in Berry.instances){
-					Berry.instances[i].destroy();
-				}
-				$('.target').berry(
-					$.extend({autoFocus: false, actions: false, name: 'myForm', attributes: "" }, myfrom ) )
-				.on('change', function(){
-					$('.result').html("<pre>"+JSON.stringify(this.toJSON(), undefined, "  ")+"</pre>");
-				}).trigger('change')
-				} catch (e) {
-				return false;
-				}
-			});
-			editor.setValue(JSON.stringify(myfrom, undefined, "\t"));
-			});
-			myfrom = {      
-			"attributes": {"first_name": "John", "name_last": "Doe"},
-            "inline":true,
-			"fields":[
-				{"label": "First Name"}, 
-				{"label": "Last Name", "name": "name_last"},
-				{"label": "Age", "type": "number"}
-			]
-			}
-		</script>
-        <script type="text/javascript">
-            bt = new berryTable({container:'#myBerryTable',
-            search: false,columns: false,upload:false,download:false,title:'Demo Content',
-            edit:true,
-            add: true,
-            click: function(model){model.toggle();},
-            delete:true,
-            entries:[],
-            count:4,
-            schema:[
-                {type:"text", name:"name", label:"Name", required:true},
-            ], data: [
-                {name:'fifth'},
-                {name:'fourth'},
-                {name:'third'},
-                {name:'second'},
-                {name:'first'},
-            ]})
-        </script>
-<!-- End This is for the berries -->
 
 </body>
 </html> 
