Update links to point to github

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ myBerryForm = {
         <div class="container">
             <div class="row">
                 <!--<h3 class="title text-center" style="margin-top:0px;margin-bottom:30px;color:#286da8">JavaScript Libraries</h3>-->
-                <a href="berry.html" class="item col-md-3 col-sm-6 col-xs-12 text-center">
+                <a href="https://github.com/Cloverstone/Berry" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-check-square-o"></i>                
                     </div><!--//icon-->
@@ -116,7 +116,7 @@ myBerryForm = {
                         <p>A robust, extensible JavaScript form library based on JSON descriptors.</p>  
                     </div><!--//content-->               
                 </a><!--//item-->
-                <a href="berryTables.html" class="item col-md-3 col-sm-6 col-xs-12 text-center">
+                <a href="https://cloverstone.github.io/berryTables/" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-table"></i>                
                     </div><!--//icon-->
