Updates to Escher Labs main site

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="overview col-sm-12 col-xs-12">
                     <div class="title">
-                        <h2>Micro-App Development Just Got Real.</h2>
+                        <h2>IT Development Just Got Awesome.</h2>
                         <!--<h4 style="text-align:center;margin-bottom:20px;">(And Open Sourced!)</h4>-->
                     </div>
                     <div class="row">
@@ -107,7 +107,7 @@ myBerryForm = {
         <div class="container">
             <div class="row">
                 <!--<h3 class="title text-center" style="margin-top:0px;margin-bottom:30px;color:#286da8">JavaScript Libraries</h3>-->
-                <a href="https://github.com/Cloverstone/Berry" class="item col-md-3 col-sm-6 col-xs-12 text-center">
+                <a href="https://cloverstone.github.io/Berry/" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-check-square-o"></i>                
                     </div><!--//icon-->
@@ -125,7 +125,7 @@ myBerryForm = {
                         <p>A tabular, paginated, JavaScript library for browsing and manipulating data.</p>  
                     </div><!--//content-->               
                 </a><!--//item-->
-                <a href="https://cloverstone.github.io/Cobler/demo.html" class="item col-md-3 col-sm-6 col-xs-12 text-center">
+                <a href="https://cloverstone.github.io/Cobler/" class="item col-md-3 col-sm-6 col-xs-12 text-center">
                     <div class="icon">
                         <i class="fa fa-dashboard"></i>                
                     </div><!--//icon-->
@@ -150,6 +150,7 @@ myBerryForm = {
     
     <!-- ******HOW****** --> 
     <section id="how" class="how section has-pattern">
+        <img src="assets/images/betalogo.png" style="width:150px;height:150px;margin-top:-80px;float:right;position:absolute;right:0px;">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6" style="text-align:center;">
@@ -160,7 +161,6 @@ myBerryForm = {
                     <div class="row">
                         <div class="col-sm-offset-3 col-sm-6">
                             <i class="fa fa-diamond fa-5x" style="font-size:150px;"></i>
-                            <h3>Graphene</h3>
                         </div>
                     </div>
                     <div class="row">
@@ -169,15 +169,26 @@ myBerryForm = {
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <h3 style="margin-top:0px;margin-bottom:20px;text-align:center;">With Graphene, Developing and 
-                        Deploying Micro-Apps Has Never Been Easier.</h3>
+                    <h3 style="margin-top:0px;margin-bottom:20px;text-align:center;">Graphene</h3>
                     <div class="content" style="padding:0px;font-size:18px;">
-                        <p>Integrating Berry.js, BerryTables.js, Cobler.js, and uAppEngine.js together, 
-                            Graphene is a fully featured web-based Micro Application platform which makes
-                            developing and deploying Micro-Applications incredibly simple.  
+                        <p>Graphene is a fully featured Application Development and Content Management Engine 
+                            built on top of <a href="https://laravel.com/">Laravel 5</a>.</p>
+                        <p> Leveraging 
+                                <a href="https://cloverstone.github.io/Berry/">Berry</a>, 
+                                <a href="https://cloverstone.github.io/BerryTables/">BerryTables</a>, 
+                                <a href="https://cloverstone.github.io/Cobler/">Cobler</a>, 
+                                uAppEngine, 
+                                <a href="https://mustache.github.io/">Mustache</a>, and 
+                                <a href="http://getbootstrap.com">Bootstrap</a> 
+                                together into one streamlined system, Graphene makes
+                            developing and deploying Micro-Applications incredibly simple.
                         </p>
                         <p>With built-in permissions and access management, secure RESTful web service integrations,
-                            and an out-of-the box web based IDE, development to deployment time is cut by more than 50%.  
+                            and an out-of-the box web based IDE, development to deployment time is faster than ever.  
+                        </p>
+                        <p><a href="https://github.com/EscherLabs/Graphene">
+                            <i class="fa fa-github" style="font-size:30px;"></i> &nbsp;Clone Graphene on GitHub!
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -190,20 +201,54 @@ myBerryForm = {
         <div class="container">
             <div class="row">
                 <h2 class="title text-center">Sample Projects</h2>
-                <!--
+
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How can I  ipsum dolor sit amet?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>Binghamton University's <a href="https://my.binghamtion.edu">myBinghamton</a> Portal</h3>
+                        <p class="answer">
+                            Utilizing Berry.js, BerryTables.js, and uAppEngine.js, Binghamton University's ITS built out
+                            a fully functional dynamic portal application.  By leveraging Berry and BerryTables for much of
+                            the custom administrative management interfaces, the teams was able to drastically reduce the 
+                            amount of development time required.  Additionally, in utilizing the uAppEngine, Binghamton 
+                            Universiy was able to create numerous custom Micro-Applications for all sorts of content including
+                            Laundry and Bus tracking widgets, as well as workflows for managing the complex commencement
+                            signup process.
+                        </p>
                     </div>
-                </div><
+                    <div class="item">
+                        <h3 class="question"><i class="fa fa-question-circle"></i>Binghamton's <a href="https://www.binghamton.edu/discovery/resources/earlywarning.html">Early Academic Alert</a> System</h3>
+                        <p class="answer">
+                            Working inside their myBinghamton portal, Binghamton University ITS programmers utlized 
+                            Berry.js in conjunction with uAppEngine.js to develop a fully interactive application for
+                            submitting, requesting, and presenting student course feedback.    
+                        </p>
+                    </div>
+                </div>
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
-                        <h3 class="question"><i class="fa fa-question-circle"></i>How does the morbi quam tortor work?</h3>
-                        <p class="answer">Proin scelerisque magna ac eros aliquam aliquam id in lacus. Morbi quam tortor, consequat at orci non, vulputate volutpat libero. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean sagittis laoreet urna eu ornare. Aenean tempor, leo vel eleifend porttitor, nibh libero ultricies est, sit amet ultricies magna enim et turpis. Donec aliquam velit eu sollicitudin cursus.</p>
+                        <h3 class="question"><i class="fa fa-question-circle"></i>CloudBerry (<a href="http://cberry.io">cberry.io</a>)</h3>
+                        <p class="answer">
+                            Serving as a testbed for the capabilities of Berry, BerryTables, and other derived 
+                            Berry.js utilities, CloudBerry was developed to enable non-programmers the ability to create
+                            rich toolsets, calculators, and workflows without ever writing a single line of code.  
+                        </p>
                     </div>
-                </div>-->
-            </div><!--//row-->
+                    <div class="item">
+                        <h3 class="question"><i class="fa fa-question-circle"></i>
+                            Binghamton's <a href="http://www.starfishsolutions.com/home/starfish-enterprise-success-platform/starfish-connect/">Starfish</a> Integration
+                        </h3>
+                        <p class="answer">
+                            Relying heavily on Berry.js and BerryTables.js, Binghamton University ITS programmers developed
+                            a rich supplemental interface to augment the limited integration capabilities of 
+                            <a href="http://www.starfishsolutions.com/home/starfish-enterprise-success-platform/starfish-connect/">Starfish CONNECT.</a>
+                            Leveraging a custom back-end database and RESTful API, the ITS staff was able to 
+                            use Berry / BerryTables to quickly construct a robust user interface for browsing, adding, 
+                            and updating advisor / advisee relationships not otherwise captured in Starfish or Binghamton's SIS. 
+                        </p>
+                    </div>
+                </div>
+
+            </div>
             <div class="more text-center">
                 <h4 class="title">More questions?</h4>
                 <a class="btn btn-lg btn-theme scrollto" href="#contact">Get in touch<i class="fa fa-arrow-circle-o-down"></i></a>
