Spelling Error Correction

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ myBerryForm = {
     <section id="sample" class="faq section">
         <div class="container">
             <div class="row">
-                <h2 class="title text-center">Sample Projects</h2>
+                <h2 class="title text-center">Example Projects</h2>
 
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
@@ -266,7 +266,7 @@ myBerryForm = {
                         healthcare, academia, and others, the team has a unique insight into the common business processes
                         and workflows which pop up across each of these industries.</p>
                     <p>Originally developed 
-                        for their own projects, the team has since Open-Sources their substantial catalog of libraries, 
+                        for their own projects, the team has since Open-Sourced their substantial catalog of libraries, 
                         utilities, and frameworks which optimize away the vast majority of business application development tasks
                         common to each of these industries.
                         The end result is a suite of tools which make application development, integration, and deployment
