--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 myBerryForm = {      
     "attributes": myData,
     "fields":[
-        {"label": "Description", 
-          "options":["Awesome","Easy","Simple"]
+        { "label": "Description", "name": "description" 
+          "options": ["Awesome","Easy","Simple"]
         }, 
-        {"label": "License", "name": "license"}
+        { "label": "License", "name": "license" }
     ]
 }</code></pre>
                         </div>
