--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container">            
             <h1 class="logo pull-left">
                 <a class="scrollto" href="#promo">
-                    <i id="logo-image" class="logo-image fa fa-cubes fa-fw" src="assets/images/logo/logo.png" alt="Logo"></i>
+                    <img id="logo-image" class="logo-image" src="assets/images/icon.png" alt="Logo">
                     <span class="logo-title">Escher Labs</span>
                 </a>
             </h1><!--//logo-->              
