--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <![endif]-->
 </head> 
 
-<body data-spy="scroll">
+<body>
     <!-- ******HEADER****** --> 
-    <header id="home" class="header navbar-fixed-top">  
+    <header class="header navbar-fixed-top">  
         <div class="container">            
             <h1 class="logo pull-left">
-                <a class="scrollto" href="#promo">
+                <a href="#promo">
                     <img id="logo-image" class="logo-image" src="assets/images/icon.png" alt="Logo">
                     <span class="logo-title">Escher Labs</span>
                 </a>
@@ -62,7 +62,7 @@
     </header><!--//header-->
     
     <!-- ******PROMO****** --> 
-    <section id="home" class="promo section offset-header has-pattern">
+    <section id="promo" class="promo section offset-header has-pattern">
         <div class="container">
             <div class="row">
                 <div class="overview col-md-6 col-sm-12 col-xs-12">
@@ -138,7 +138,7 @@
                 <div class="col-sm-6" style="text-align:center;">
                     <div class="row">
                         <div class="col-sm-12">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/F6g3qwCMvl8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="100%" height="300" src="https://www.youtube.com/embed/F6g3qwCMvl8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             <p>Binghamton's Open Source Portal, and Why You Should Care</p> 
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                 <div class="col-sm-6" style="text-align:center;">
                         <div class="row">
                             <div class="col-sm-12">
-                                <iframe width="100%" height="250" src="https://www.youtube.com/embed/qfW0iCJOlwA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe width="100%" height="300" src="https://www.youtube.com/embed/qfW0iCJOlwA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 <p>Getting Started With Graphene</p> 
                             </div>
                         </div>
@@ -335,7 +335,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/plugins/jquery-inview/jquery.inview.min.js"></script>
     <script type="text/javascript" src="assets/plugins/FitVids/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>    
     <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
     <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-match-height/jquery.matchHeight-min.js"></script>
