Add github logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">    
-    <link rel="shortcut icon" href="favicon.ico">  
+    <link rel="shortcut icon" href="assets/images/icon.png">  
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>  
     <!-- Global CSS -->
@@ -54,7 +54,13 @@
                         <li class="nav-item"><a href="#products">Products</a></li>
                         <li class="nav-item"><a href="#videos">Videos</a></li>
                         <li class="nav-item"><a href="#about">About Us</a></li>
-                        <li class="nav-item last"><a href="#contact">Contact</a></li>
+                        <li class="nav-item"><a href="#contact">Contact</a></li>
+                        <li class="nav-item last">
+                            <a href="https://github.com/escherlabs" target="_blank">
+                                <img src="assets/images/github_logo.png" style="width:20px;">&nbsp;
+                                <span class="visible-xs-inline">Github</span>
+                            </a>
+                        </li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->           
