Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -348,7 +348,15 @@
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <!--[if !IE]>--> 
     <script type="text/javascript" src="assets/js/animations.js"></script> 
-    <!--<![endif]-->         
+    <!--<![endif]-->       
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-11743206-7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-11743206-7');
+    </script>
+  
 
 </body>
 </html> 
